add PyPlot to deps

--- a/docs/src/examples/P64.md
+++ b/docs/src/examples/P64.md
@@ -5,7 +5,7 @@ Let us use the *unweighted* 1D path with a synthetic signal as a simple example 
 
 We first construct the `GraphSig` and `GraphPart` objects of the *primal* graph ``G = P_{64}``.
 ```@example path
-using MultiscaleGraphSignalTransforms, Plots, LinearAlgebra
+using MultiscaleGraphSignalTransforms, Plots, LinearAlgebra; gr()
 import WaveletsExt: wiggle
 
 # construct P64
