--- a/docs/src/examples/P64.md
+++ b/docs/src/examples/P64.md
@@ -55,8 +55,8 @@ p1 = title!("Top 10 HGLET basis vectors")
 important_idx = sortperm(dvec_lphglet[:].^2; rev = true)
 lphglet_top10 = zeros(N, 10)
 for i in 1:10
-    w, _ = HGLET_Synthesis(reshape(spike(important_idx[i], N), (N, 1)),
-        GP, BS_lphglet, G, method = :L)
+    w, _ = LPHGLET_Synthesis(reshape(spike(important_idx[i], N), (N, 1)),
+        GP, BS_lphglet, G; method = :L, ϵ = 0.3)
     lphglet_top10[:, i] = w[:]
 end
 wiggle(lphglet_top10; sc = 0.75)
