control margin by `left_margin = 5mm`

--- a/docs/src/examples/P64.md
+++ b/docs/src/examples/P64.md
@@ -5,7 +5,7 @@ Let us use the *unweighted* 1D path with a synthetic signal as a simple example 
 
 We first construct the `GraphSig` and `GraphPart` objects of the *primal* graph ``G = P_{64}``.
 ```@example path
-using MultiscaleGraphSignalTransforms, Plots, LinearAlgebra
+using MultiscaleGraphSignalTransforms, Plots, Plots.PlotMeasures, LinearAlgebra
 import WaveletsExt: wiggle
 
 # construct P64
@@ -24,7 +24,8 @@ GP = partition_tree_fiedler(G; swapRegion = false)
 # use Chebyshev polynomial T₅(x) (x ∈ [0, 1]) as an example signal
 G.f = reshape([16 * x^5 - 20 * x^3 + 5 * x for x in LinRange(0, 1, N)], (N, 1))
 plot(G.f; c = :black, lw = 2, legend = false, grid = false, size = (815, 300))
-xticks!([1; 8:8:64], vcat(string("1"), [string(k) for k in 8:8:64]))
+xticks!([1; 8:8:64], vcat(string("1"), [string(k) for k in 8:8:64])) # hide
+plot!(left_margin = 5mm) # hide
 ```
 
 
@@ -63,8 +64,9 @@ wiggle(lphglet_top10; sc = 0.75)
 p2 = title!("Top 10 LP-HGLET basis vectors")
 
 plot(p1, p2, layout = Plots.grid(2, 1), size = (815, 600))
-xticks!([1; 8:8:64], vcat(string("1"), [string(k) for k in 8:8:64]))
-yticks!([0; 1:10], vcat(string(""), [string(k) for k in 1:10]))
+xticks!([1; 8:8:64], vcat(string("1"), [string(k) for k in 8:8:64])) # hide
+yticks!([0; 1:10], vcat(string(""), [string(k) for k in 1:10])) # hide
+plot!(left_margin = 5mm) # hide
 ```
 
 ## Graph Signal Processing via GHWT, eGHWT, etc.
@@ -145,8 +147,9 @@ p5 = title!("Top 10 eGHWT best basis vectors")
 
 # display the top 10 basis vectors
 plot(p1, p2, p3, p4, p5, layout = Plots.grid(5, 1), size = (815, 1500))
-xticks!([1; 8:8:64], vcat(string("1"), [string(k) for k in 8:8:64]))
-yticks!([0; 1:10], vcat(string(""), [string(k) for k in 1:10]))
+xticks!([1; 8:8:64], vcat(string("1"), [string(k) for k in 8:8:64])) # hide
+yticks!([0; 1:10], vcat(string(""), [string(k) for k in 1:10])) # hide
+plot!(left_margin = 5mm) # hide
 ```
 
 
@@ -216,6 +219,7 @@ wiggle(wav_lp_top10; sc = 0.75)
 p3 = title!("Top 10 LP-NGWP basis vectors")
 
 plot(p1, p2, p3, layout = Plots.grid(3, 1), size = (815, 900))
-xticks!([1; 8:8:64], vcat(string("1"), [string(k) for k in 8:8:64]))
-yticks!([0; 1:10], vcat(string(""), [string(k) for k in 1:10]))
+xticks!([1; 8:8:64], vcat(string("1"), [string(k) for k in 8:8:64])) # hide
+yticks!([0; 1:10], vcat(string(""), [string(k) for k in 1:10])) # hide
+plot!(left_margin = 5mm) # hide
 ```
