hide `using Plots.PlotMeasures`

--- a/docs/src/examples/P64.md
+++ b/docs/src/examples/P64.md
@@ -5,8 +5,9 @@ Let us use the *unweighted* 1D path with a synthetic signal as a simple example 
 
 We first construct the `GraphSig` and `GraphPart` objects of the *primal* graph ``G = P_{64}``.
 ```@example path
-using MultiscaleGraphSignalTransforms, Plots, Plots.PlotMeasures, LinearAlgebra
+using MultiscaleGraphSignalTransforms, Plots, LinearAlgebra
 import WaveletsExt: wiggle
+using Plots.PlotMeasures # hide
 
 # construct P64
 N = 64
