Some old inconsistency, e.g., method => gltype; costfun => cfspec

--- a/docs/src/examples/P64.md
+++ b/docs/src/examples/P64.md
@@ -35,19 +35,19 @@ plot!(left_margin = 5mm) # hide
 ## analyze the signal via HGLET
 dmatrixH, dmatrixHrw, dmatrixHsym = HGLET_Analysis_All(G, GP)
 dvec_hglet, BS_hglet, trans_hglet = HGLET_GHWT_BestBasis(GP, dmatrixH = dmatrixH,
-    dmatrixHrw = dmatrixHrw, dmatrixHsym = dmatrixHsym, costfun = 1)
+    dmatrixHrw = dmatrixHrw, dmatrixHsym = dmatrixHsym, cfspec = 1)
 
 ## LP-HGLET
 dmatrixsH, dmatrixsHsym = LPHGLET_Analysis_All(G, GP; ϵ = 0.3)
 dvec_lphglet, BS_lphglet, trans_lphglet = HGLET_GHWT_BestBasis(GP, dmatrixH = dmatrixsH,
-    dmatrixHsym = dmatrixsHsym, costfun = 1)
+    dmatrixHsym = dmatrixsHsym, cfspec = 1)
 
 # find the top 10 HGLET basis vectors
 important_idx = sortperm(dvec_hglet[:].^2; rev = true)
 hglet_top10 = zeros(N, 10)
 for i in 1:10
     w, _ = HGLET_Synthesis(reshape(spike(important_idx[i], N), (N, 1)),
-        GP, BS_hglet, G, method = :L)
+        GP, BS_hglet, G, gltype = :L)
     hglet_top10[:, i] = w[:]
 end
 wiggle(hglet_top10; sc = 0.45)
@@ -58,7 +58,7 @@ important_idx = sortperm(dvec_lphglet[:].^2; rev = true)
 lphglet_top10 = zeros(N, 10)
 for i in 1:10
     w, _ = LPHGLET_Synthesis(reshape(spike(important_idx[i], N), (N, 1)),
-        GP, BS_lphglet, G; method = :L, ϵ = 0.3)
+        GP, BS_lphglet, G; gltype = :L, ϵ = 0.3)
     lphglet_top10[:, i] = w[:]
 end
 wiggle(lphglet_top10; sc = 0.45)
